--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -9,20 +9,19 @@
 .top-bar {
   display:flex;
   flex-direction: row;
-  width:20%; 
+  width:350px;
+  margin-right: 2em;
+  margin-left: 2em;
 }
 
 .top-bar .box {
   margin: 1.5em 1.5%;
 }
 
-/* Name */
-.top-header{
-  margin-top: 1em;
-}
+/* Title */
 
 .top-header h1 {
-  font-size: 4em;
+  font-size: 3em;
   color: black;
   /*text-shadow: 2px 2px black;*/ /*might be better without*/
   cursor: default;
@@ -31,20 +30,58 @@
 }
 
 /*Lets get started*/
+.zipcode-wrapper{
+  max-width:30em;
+  width:100%;
+  display:flex;
+  justify-content: center;
+
+  border-radius: 3em;
+  
+}
+
+.zipinput-wrapper{
+  width:70%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border-top-color: rgba(0, 187, 255, 0.6);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-bottom-color: rgba(0, 187, 255, 0.6);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-left-color: rgba(0, 187, 255, 0.6);
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-image-outset: 0;
+  border-image-repeat: stretch;
+  border-image-slice: 100%;
+  border-image-source: none;
+  border-image-width: 1;
+  border-radius: 3em 0 0 3em;
+}
+
 .zipCode {
-  height:100px;
+  margin-top:1.2em;
+  height:200px;
 }
 
 .zipCode h2 {
   color: black;
-  margin-top: 1.5em;
   font-size: 1.7em;
   cursor: default;
 }
 
 .zipCode h2:first-of-type{
+  padding: .5em 0;
   font-weight: bold;
   font-size: 3em;
+  color:rgba(0,187,255,0.6)
+}
+
+.zipCode h2:last-child{
+  padding-top: 1.5em;
 }
 
 .inputContainer {
@@ -65,7 +102,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-end;
-  background:linear-gradient(to bottom,rgba(7, 7,7 ,0.3),rgba(7,7,7 ,0.3)), url(../images/background.jpg) repeat;
+  background: url(../images/background.jpg) repeat;
 }
 
 .box-title h1 {
