--- a/src/assets/css/sales.css
+++ b/src/assets/css/sales.css
@@ -21,66 +21,45 @@
   .info-container h1 {
       color:white;
       font-size:2.5em;
-      font-weight: bold;
   }
 
   .question-title{
       margin-bottom: 6em;
   }
   
-  /* .box-title h1 {
-    font-family: 'Open Sans';
-    font-size: 1.2em;
-  }
-  
-  .side-side {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-content: center;
-    margin: 1em 0;
-  }
-  
-  .left-side {
-    border-right: 2px solid #2196f3;
-    width: 49%;
-  }
-  
-  .right-side {
-    width: 49%;
-  } */
 
 img{
     width:100%;
     height:auto;
 }
 
-.question-wrapper{
+
+.media-wrapper{
     display:flex;
     justify-content: space-evenly;
-    width:100%;
+    width:840px;
     align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
    
 }
 
 .selection {
-    border:.1em solid rgba(0,187,255,0.6);
+    border:.1em solid rgba(0,187,255,0.2);
     cursor:pointer;
     display:flex;
-    justify-content: space-evenly;
-    width:100%;
     align-content: baseline;
-    margin: 1em 3em;
-    padding: 0em;
+    margin: 1em 2em;
     background: linear-gradient(to bottom, rgba(0,170,231, .10), rgba(0,170,231, .10));
-    opacity: 1;
+    border-radius: .2em;
+    
 }
 
 .selection:hover {
-    box-shadow:.1em .1em 1.5em rgb(250, 202, 24);
+    
+    background-color: rgba(0,187,255,0.1)
 }
 
 .selection:active{
     opacity: none;
 }
-
