got bong and pipe to show parent state

--- a/src/assets/css/sales.css
+++ b/src/assets/css/sales.css
@@ -25,6 +25,7 @@
 
   .question-title{
       margin-bottom: 6em;
+      width:80%;
   }
   
 
@@ -63,3 +64,10 @@ img{
 .selection:active{
     opacity: none;
 }
+
+
+input[type='checkbox'] {
+    display:none;
+   
+}
+
