--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -1,6 +1,23 @@
 .contactInfo {
   display:flex;
   flex-direction: column;
-  width:600px;
   margin:0 auto;
+  width:70%
+}
+
+.contactForm {
+  margin:0 auto;
+  width:100%;
+}
+
+.contactForm input{
+  width:50%;
+  
+}
+
+
+@media only screen and (max-width: 600px){
+  .contactForm input{
+    width:100%;
+  }
 }
