--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(./assets/images/background.jpg) repeat;
   display: flex;
   justify-content: center; 
-  height:100vh;
+  height:100%;
 
 }
