--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(./assets/images/background.jpg) repeat;
   display: flex;
   justify-content: center; 
-  height:100%;
+  height:100vh;
 
 }
