--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -2,12 +2,14 @@
   display:flex;
   flex-direction: column;
   margin:0 auto;
-  width:70%
+  width:70%;
+ 
 }
 
 .contactForm {
   margin:0 auto;
   width:100%;
+  margin-bottom:5em;
 }
 
 .contactForm input{
@@ -15,9 +17,17 @@
   
 }
 
+.contactForm button{
+  margin-top: 2em;
+  width:50%;
+}
 
 @media only screen and (max-width: 600px){
   .contactForm input{
+    width:100%;
+  }
+
+  .contactForm button{
     width:100%;
   }
 }
