--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -31,3 +31,23 @@
     width:100%;
   }
 }
+
+
+
+/*Loader*/
+
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid rgba(0, 187, 255, 0.6); /* Blue */
+  border-bottom: 16px solid rgb(250, 202, 24) ;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
