--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -38,12 +38,13 @@
 
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid rgba(0, 187, 255, 0.6); /* Blue */
-  border-bottom: 16px solid rgb(250, 202, 24) ;
+  margin: 0 auto;
+  border: 8px solid darkgrey; /* Light grey */
+  border-top: 8px solid rgba(0, 187, 255, 0.6); /* Blue */
+  border-bottom: 8px solid rgb(250, 202, 24) ;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 60px;
+  height: 60px;
   animation: spin 2s linear infinite;
 }
 
