--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -1,4 +1,14 @@
+/*webpage1*/
 
+.webpage{
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  width:100%;
+
+}
+
+/*landing page*/
 .landing{
   display: flex;
   justify-content: center;
@@ -10,24 +20,71 @@
 
 
 /*Shop and Sign topbar*/
+.top-bar{
+  max-width: 1200px;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgb(255, 195, 0);
+  
+}
 
-.topbar-wrapper{
-  width:100%;
+.topBar-left{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width:50%;
+  
+}
+
+.topBar-left h1{
+  font-size: 50px;
+  margin-left: 35px;
+}
+
+.yellow{
+  width:120px;
+  height:120px;
+}
+
+.navbar-wrapper{
+  width:50%;
   display: flex;
   justify-content: flex-end;
 }
 
-.top-bar {
+.nav-bar {
   display:flex;
   flex-direction: row;
-  width:350px;
+  width:100%;
   margin-right: 2em;
   margin-left: 2em;
 }
 
 .top-bar .box {
-  margin: 1.5em 1.5%;
+  border-right: 2px solid #00AAE7;
 }
+
+.top-bar .link {
+  width: 100%;
+  
+}
+
+.top-bar .link:hover {
+    background:#00AAE7;
+   
+ 
+}
+
+.top-bar .link button:hover {
+
+    color: rgb(255, 195, 0);
+    
+  }
+
 
 /* Title */
 
@@ -48,7 +105,7 @@
 
 /*Lets get started*/
 .zipcode-wrapper{
-  max-width:30em;
+  max-width:40em;
   width:100%;
   display:flex;
   justify-content: center;
@@ -145,5 +202,9 @@
   padding-bottom: 1em;
 }
 
+/*zipcode part*/
 
+.zipcode-section{
+  margin-top: 150px;
+}
 
