got it a litte more responsive

--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -41,8 +41,8 @@
 }
 
 .topBar-left h1{
-  font-size: 50px;
-  margin-left: 35px;
+  font-size: 6em;
+  margin-left: 20px;
 }
 
 
@@ -105,10 +105,6 @@
   font-weight: bold;
 }
 
-.hide{
-  display:none;
-}
-
 /*Lets get started*/
 .zipcode-wrapper{
   max-width:40em;
@@ -165,10 +161,11 @@
 }
 
 .inputContainer {
-  margin:1em 0 2em 0;
+  margin:1em auto 2em auto;
   display:flex;
   flex-direction: row;
   justify-content: center;
+  width: 80%;
 
 }
 
@@ -219,8 +216,8 @@
 /*mobile menu*/
 
 .mobile-menu{
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
 }
 
 
@@ -231,9 +228,10 @@
   }
   .topBar-left{
     width:60%;
+    
   }
   .topBar-left h1{
-    margin-left: 30%;
+    font-size: 3em;
   }
 
   .yellow{
