--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -131,16 +131,12 @@
   border-left-color: rgba(0, 187, 255, 0.6);
   border-left-style: solid;
   border-left-width: 1px;
-  border-image-outset: 0;
-  border-image-repeat: stretch;
-  border-image-slice: 100%;
-  border-image-source: none;
-  border-image-width: 1;
   border-radius: 3em 0 0 3em;
+  background-color: whitesmoke;
 }
 
 .zipCode {
-  margin-top:1.2em;
+  margin-top:.5em;
   height:250px;
 }
 
@@ -148,6 +144,12 @@
   color:whitesmoke;
   font-size: 1.7em;
   cursor: default;
+}
+
+.address-icon{
+  width:20px;
+  height:20px;
+  margin-left:10px;
 }
 
 .headsub-wrapper {
@@ -158,7 +160,10 @@
 .headsub-wrapper h2 {
   padding-top:.5em;
   font-size: 2.3em;
-  color:whitesmoke
+  color:whitesmoke;
+  font-family: 'Open Sans',Helvetica;
+  font-weight: 800;
+  font-size:3em
 }
 
 .inputContainer {
@@ -209,7 +214,7 @@
 /*zipcode part*/
 
 .zipcode-section{
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 
@@ -241,5 +246,16 @@
   }
   .mobile-menu{
     margin-right: 15px;
+  }
+
+  .zipcode-wrapper {
+    flex-direction: column;
+  }
+
+  .zipinput-wrapper {
+    width:100%;
+    border:solid 1px rgba(0, 187, 255, 0.6);
+    border-radius:3em;
+    height:50px;
   }
 }
