--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -2,25 +2,31 @@
   display:flex;
   flex-direction: column;
   margin:0 auto;
-  width:70%;
- 
+  width:82%;
+  background-color: #00AAE7;
 }
 
 .contactForm {
   margin:0 auto;
   width:100%;
-  margin-bottom:5em;
+  margin:5em 0;
 }
 
-.contactForm input{
-  width:50%;
-  
-}
+
 
 .contactForm button{
   margin-top: 2em;
   width:50%;
 }
+
+.name {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width:100%;
+  margin: 0 auto;
+}
+
 
 @media only screen and (max-width: 600px){
   .contactForm input{
