--- a/src/assets/css/sales.css
+++ b/src/assets/css/sales.css
@@ -8,7 +8,6 @@
 /*Cards*/
 
 .info-container {
-    margin-top:3em;
     width:100%;
     display:flex;
     flex-direction: row;
@@ -35,6 +34,7 @@
   }
 
   .question-title h1{
+      width: 90%;
       color:black;
 
   }
