--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -6,6 +6,8 @@
   background-color: #00AAE7;
 }
 
+
+
 .contactForm {
   margin:0 auto;
   width:100%;
@@ -34,6 +36,9 @@
   align-items: center;
   width:100%;
   margin-bottom: 1.5em ;
+  background-color: whitesmoke;
+  padding: 1em 0;
+  border-radius: .4em;
 }
 
 .phone h1 {
@@ -47,49 +52,61 @@
   height: 20px;
 }
 
+.nobk{
+  background-color: transparent;
+
+}
+
+
 .usphone{
   display: flex;
   flex-direction: row;
-  position: relative;
-  right:30px
+
   
 }
 
-.phone input{
-  position: relative;
-  right:30px
+.nobk input{
+  margin-right: 3em;
+  background-color: transparent;
+
+}
+
+
+.bottom-form .phone input:focus{
+  border:none;
 }
 
 
 
 .login-wrapperbg{
   width:100%;
-  background-color: white;
 }
 
 .login-wrapper{
-  width:800px;
+  max-width:800px;
+  width: 100%;
   margin: 4em auto 0 auto;
-  
+  background-color: #ffc300;
 }
 
 .top-bar2{
   border-bottom: 1px #E5E6E7 solid;
-  margin-top:15px;
+  padding-top:15px;
+  background-color: #ffc300;
 }
 
 .top-bar2 .yellow{
-  width:33px;
+  width:31px;
   height:65px;
   margin-left:0px;
 }
 
 .login-form{
-  padding:30px 0;
+  padding:10em 0;
 }
 
 .top-form{
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 .top-form h1{
   font-size: 2em;
@@ -107,21 +124,34 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width:40%;
+  width:50%;
 }
 
 .bottom-form button{
-  width:50%;
+
   margin: 1em auto 0 auto;
 }
 
+
+.bottom-form p{
+  font-size: 12px;
+  text-align: left;
+  line-height: 2em;
+}
 @media only screen and (max-width: 600px){
   .contactForm input{
     width:100%;
+    
   }
 
   .contactForm button{
     width:100%;
+  }
+  .bottom-form{
+    width:90%;
+  }
+  .contactForm .nobk input{
+    margin:0;
   }
 }
 
@@ -144,6 +174,8 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  
 
 }
 
