--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -138,6 +138,13 @@
   text-align: left;
   line-height: 2em;
 }
+
+
+.otp-form{
+  padding:20em 0px;
+ 
+
+}
 @media only screen and (max-width: 600px){
   .contactForm input{
     width:100%;
