--- a/src/assets/css/checkout.css
+++ b/src/assets/css/checkout.css
@@ -84,15 +84,17 @@
 
 .login-wrapper{
   max-width:800px;
-  width: 100%;
+  width: 90%;
   margin: 4em auto 0 auto;
   background-color: #ffc300;
+  border-radius: 1em;
 }
 
 .top-bar2{
   border-bottom: 1px #E5E6E7 solid;
   padding-top:15px;
   background-color: #ffc300;
+
 }
 
 .top-bar2 .yellow{
@@ -103,6 +105,7 @@
 
 .login-form{
   padding:10em 0;
+  
 }
 
 .top-form{
@@ -141,8 +144,40 @@
 
 
 .otp-form{
-  padding:20em 0px;
- 
+  padding:15em 0px;
+  display: flex;
+  flex-direction: column;
+  width:60%;
+  margin: 0 auto;
+}
+
+.otp-form p {
+  font-size: 2em;
+  padding-bottom: 1.7em;
+}
+
+.otp-input{
+  margin: 0 auto;
+  width:80%;
+  background-color: whitesmoke;
+  padding: 1em 0;
+}
+
+.otp-form input{
+  width: 90%;
+  margin:0 auto;
+}
+
+.otp-form input:focus{
+  border:none;
+}
+
+.otp-form button{
+  width:50%;
+  margin-top:2em;
+  margin-left: auto;
+  margin-right: auto;
+
 
 }
 @media only screen and (max-width: 600px){
@@ -159,6 +194,10 @@
   }
   .contactForm .nobk input{
     margin:0;
+  }
+  
+  .otp-form{
+    width:90%
   }
 }
 
