--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   max-width: 1200px;
   width:100%;
-
+  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(../images/background.jpg) repeat;
 }
 
 /*landing page*/
