--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -11,7 +11,7 @@
 
 .prodDisplayBG{
   max-width: 800px;
-  width:80%;
+  width:90%;
   margin: 0 auto;
   padding-top: 20px;
   display: flex;
@@ -24,6 +24,8 @@
   background-color: whitesmoke;
   width:26%;
   border: .1em solid #00AAE7;
+  position: relative;
+  margin:2px;
  
 }
 
@@ -32,5 +34,28 @@
   position: relative;
   z-index: 1;
   box-shadow: -2px 10px 42px 0px rgb(0, 0, 0, 0.28);
+  
 }
 
+.circle-wrapper{
+  opacity: 0;
+  position: absolute;
+  right:0px;
+  padding:1.5em;
+  z-index:5;
+  border:none;
+  background-color: transparent;
+
+}
+
+.prod-wrapper:hover .circle-wrapper{
+  opacity: 1;
+}
+
+.circle{
+  margin-top:.5em;
+  margin-right: .5em;
+  position: absolute;
+  right:0px;
+  top:0px;
+}
