--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -226,10 +226,11 @@
 
 .zipcode-section{
   margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 .login-mobile{
-  margin-top:80px;
+  margin-top:40px;
   color:white;
   font-size: 1.6em;
   display:flex;
