--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -10,7 +10,6 @@
 }
 
 .prodDisplayBG{
-  max-width: 800px;
   width:90%;
   margin: 0 auto;
   padding-top: 30px;
@@ -23,10 +22,11 @@
 
 .prod-wrapper{
   background-color: whitesmoke;
-  width:26%;
+  width:30%;
   border: .1em solid #00AAE7;
   position: relative;
   margin:2px;
+  border-radius: 5px;
  
 }
 
@@ -36,6 +36,17 @@
   z-index: 1;
   box-shadow: -2px 10px 42px 0px rgb(0, 0, 0, 0.28);
   
+}
+
+.prod-wrapper:hover h1{
+  color:#00AAE7;
+}
+
+.value{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 10px;
 }
 
 .circle-wrapper{
@@ -79,6 +90,6 @@
 
 @media only screen and (max-width: 600px){
   .prod-wrapper{
-    width:40%;
+    width:48%;
   }
 }
