--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -93,6 +93,17 @@
   color:black;
 }
 
+.view-item{
+  width:80%;
+  display:flex;
+  flex-direction: column;
+}
+
+.img-item{
+  width:30%;
+  border: 1px solid black;
+}
+
 @media only screen and (max-width: 600px){
   .link-prod{
     width:48%;
