--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -94,15 +94,21 @@
 }
 
 .view-item{
-  width:80%;
   display:flex;
   flex-direction: column;
 }
 
 .img-item{
-  width:30%;
+  display:flex;
+  flex-direction: row;
+  margin-top:20px;
+}
+
+.item-img{
+  width:18%;
   border: 1px solid black;
 }
+
 
 @media only screen and (max-width: 600px){
   .link-prod{
