got it to look how its supposed to

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -97,16 +97,36 @@
   display:flex;
   flex-direction: column;
 }
-
-.img-item{
-  display:flex;
-  flex-direction: row;
+.imgw-bg{
+  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.2), rgba(7, 7, 7, 0.2)), url(../images/background.jpg) repeat;
+  width:100%;
   margin-top:20px;
+  height: 350px;
+}
+.imgItem-wrapper{
+  position: relative;
+  width:100%;
+  box-sizing: border-box;
+  
+}
+.img-item{
+
+  position: absolute;;  
+  display:flex;
+  overflow: hidden;
+  
 }
 
 .item-img{
-  width:18%;
-  border: 1px solid black;
+  position: relative;
+  width:350px;
+  margin-right: 4px;
+  background-color: whitesmoke;
+}
+
+.item-img img{
+  max-width: 350px;
+  width:100%;
 }
 
 
