--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -96,29 +96,30 @@
 .view-item{
   display:flex;
   flex-direction: column;
+  max-width: 2400px;
+  width:100%;
 }
-.imgw-bg{
+
+.imgItem-wrapper{
   background:linear-gradient(to bottom, rgba(7, 7, 7, 0.2), rgba(7, 7, 7, 0.2)), url(../images/background.jpg) repeat;
   width:100%;
   margin-top:20px;
   height: 350px;
-}
-.imgItem-wrapper{
-  position: relative;
-  width:100%;
+  display: flex;
+
   box-sizing: border-box;
+
   
 }
 .img-item{
 
-  position: absolute;;  
   display:flex;
-  overflow: hidden;
-  
+  margin:0 auto;
+
 }
 
 .item-img{
-  position: relative;
+
   width:350px;
   margin-right: 4px;
   background-color: whitesmoke;
