--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -136,6 +136,7 @@
   max-width: 1080px;
   width:100%;
   margin:0 auto;
+  position: relative;
 }
 
 .item-description{
@@ -143,7 +144,7 @@
   display: flex;
   text-align: left;
   flex-direction: column;
-  width:80%;
+  width:70%;
   padding-left:48px
 }
 .price-name{
@@ -196,7 +197,50 @@
   line-height: 1.7em;
 }
 
+.right-wrapper{
+  border:1px solid lightgrey;
+  width:20%;
+  position: absolute;
+  right:20px;
+  width:300px;
+  top:-68px;
+  background-color: white;
+  border-radius: 5px;
+}
 
+.pic-name{
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  align-items: center;
+}
+
+.login{
+  display: flex;
+  flex-direction: column;
+  padding:15px;
+}
+
+.pro-pic{
+  width:65px;
+  height:65px;
+  border-radius: 50%;
+  background-size: cover;
+  background-image:url(../images/flower2.png);
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat;
+  margin-right:15px;
+}
+
+.pic-name h1{
+  font-size:1.8em;
+}
+
+.login button{
+  height: 44px;
+  padding:0px;
+  margin-top: 10px;
+}
 @media only screen and (max-width: 600px){
   .link-prod{
     width:48%;
