--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -241,6 +241,42 @@
   padding:0px;
   margin-top: 10px;
 }
+
+.sign-up{
+  border:1px solid #00AAE7;
+  color: #00AAE7;
+}
+
+.sign-up:hover{
+  background-color: rgba(0, 170, 231, .1);
+}
+
+.item-signup{
+  width:100%;
+  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(../images/background.jpg) repeat;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+
+}
+
+.zip-wrapper{
+  max-width: 800px;
+  width:100%;
+  height:500px;
+  border:1px solid rgb(255,195,0);
+  background-color: rgb(255,195,0, .1);
+  position: relative;
+  display: flex;
+  align-items: center;
+ margin-top: 80px;
+}
+
+.zip-wrapper .zipCode{
+  position: absolute;
+  z-index: 1;
+  width:100%;
+}
 @media only screen and (max-width: 600px){
   .link-prod{
     width:48%;
