--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -277,6 +277,11 @@
   z-index: 1;
   width:100%;
 }
+
+.map-wrapper{
+  max-width: 400px;
+}
+
 @media only screen and (max-width: 600px){
   .link-prod{
     width:48%;
