--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -20,7 +20,7 @@
 
 /*Shop and Sign topbar*/
 .top-bar{
-  max-width: 1200px;
+  max-width: 2000;
   width: 100%;
   height: 80px;
   margin:0 auto;
@@ -55,7 +55,7 @@
 }
 
 .navbar-wrapper{
-  width:50%;
+  width:30%;
   display: flex;
   justify-content: flex-end;
 }
@@ -277,7 +277,6 @@
     height:auto;
   }
   .topBar-left{
-    width:60%;
     justify-content: flex-end;
     margin-left: 0px;
   
@@ -304,6 +303,5 @@
     width:20px;
     height:auto;
     margin-left:0px;
-    margin-right:40px;
   }
 }
