--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   width:100%;
-  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(../images/background.jpg) repeat;
 }
 
 /*landing page*/
@@ -16,7 +15,10 @@
 }
 
 
-
+.top-wrapper{
+  background:linear-gradient(to bottom, rgba(7, 7, 7, 0.7), rgba(7, 7, 7, 0.7)), url(../images/background.jpg) repeat;
+  padding-bottom: 80px;
+}
 
 /*Shop and Sign topbar*/
 .top-bar{
